--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,19 +27,19 @@ requirements:
     - cmake
     - ninja
   host:
-    - libmetatensor >=0.1.10,<0.2
+    - libmetatensor >=0.1.13,<0.2
     # We build against the CPU version of torch to not have to deal with CUDA
     # compilers (torch's CMake targets tries to find CUDA compilers even when
     # there is no CUDA code to build). This does not impact the `run`
     # dependency, since libtorch `run_exports` are variant agnostic
-    - libtorch  =*=cpu*
+    - libtorch * cpu*
 
 test:
   requires:
     - cmake
     - ninja
     - {{ compiler('cxx') }}
-    - libtorch  =*=cpu*
+    - libtorch * cpu*
   files:
     - test-project/
   commands:
