--- a/recipe/test-project/CMakeLists.txt
+++ b/recipe/test-project/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreadedDLL")
+
 project(test-metatensor-torch CXX)
 
 find_package(metatensor_torch)
