Make sure to include `- libtorch` in the dependencies

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -28,6 +28,9 @@ requirements:
     # there is no CUDA code to build). This does not impact the `run`
     # dependency, since libtorch `run_exports` are variant agnostic
     - libtorch * cpu*
+    # Also add a standard libtorch dependency to make sure it is taken into
+    # account by migrations
+    - libtorch
 
 test:
   requires:
