MNT: Re-rendered with conda-smithy 3.52.3 and conda-forge-pinning 2025.10.02.07.40.46

--- a/.ci_support/linux_aarch64_.yaml
+++ b/.ci_support/linux_aarch64_.yaml
@@ -12,5 +12,7 @@ cxx_compiler_version:
 - '14'
 docker_image:
 - quay.io/condaforge/linux-anvil-aarch64:alma9
+libtorch:
+- '2.8'
 target_platform:
 - linux-aarch64
